--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.54",
         "laravel/tinker": "^2.5",
-        "spatie/laravel-cookie-consent": "^2.12"
+        "livewire/livewire": "^2.5",
+        "spatie/laravel-cookie-consent": "^2.12",
+        "spatie/laravel-permission": "^4.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
