--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.37.5",
         "sass-loader": "^12.1.0",
+        "tailwind-scrollbar": "^1.3.1",
         "tailwindcss": "^2.0.2"
     },
     "dependencies": {
