--- a/package.json
+++ b/package.json
@@ -12,17 +12,14 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.2.1",
         "alpinejs": "^2.7.3",
-        "autoprefixer": "^10.1.0",
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.43",
         "lodash": "^4.17.19",
-        "postcss": "^8.2.1",
         "postcss-import": "^12.0.1",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.37.5",
         "sass-loader": "^12.1.0",
-        "tailwind-scrollbar": "^1.3.1",
-        "tailwindcss": "^2.2.9"
+        "tailwind-scrollbar": "^1.3.1"
     },
     "dependencies": {
         "tailwindcss-autofill": "^0.1.0",
