--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "tailwind-scrollbar": "^1.3.1"
     },
     "dependencies": {
+        "datatables.net-bs4": "^1.12.1",
+        "datatables.net-buttons-bs4": "^2.2.3",
         "tailwindcss-autofill": "^0.1.0",
         "tailwindcss-shadow-fill": "^0.1.0",
         "tailwindcss-text-fill": "^0.1.2",
