--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,16 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|8.0",
+        "php": "^7.4|8.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.54",
         "laravel/tinker": "^2.5",
-        "livewire-ui/modal": "^1.0",
         "livewire/livewire": "^2.5",
         "spatie/laravel-cookie-consent": "^2.12",
-        "spatie/laravel-permission": "^4.3"
+        "spatie/laravel-permission": "^4.3",
+        "symfony/mailer": "^5.4",
+        "wire-elements/modal": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
